--- a/package.json
+++ b/package.json
@@ -6,17 +6,24 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "api:fetch": "curl http://localhost:8080/openapi.json > api/starling.json",
+    "api:generate": "orval",
+    "api:sync": "npm run api:fetch && npm run api:generate"
   },
   "dependencies": {
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.5",
     "axios": "^0.26.0",
+    "date-fns": "^2.28.0",
     "next": "12.1.0",
+    "orval": "^6.6.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-query": "^3.34.16"
   },
   "devDependencies": {
+    "@types/react": "^17.0.39",
     "autoprefixer": "^10.4.2",
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
