--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "api:fetch": "curl http://localhost:8080/openapi.json > api/starling.json",
     "api:generate": "orval",
-    "api:sync": "npm run api:fetch && npm run api:generate"
+    "api:sync": "npm run api:fetch && npm run api:generate",
+    "colours": "node utils/makeColourFiles"
   },
   "dependencies": {
     "@headlessui/react": "^1.5.0",
